
new in 1.1
==========
- [quan]	introduced new variable type "coordinate" (lng, lat)
- [quan]	optional: users can integrate their own templates into 
			their profile pages if the admin allowes them to do this (experimental)
- [quan]	improved the migration routint to import pnProfile data
- [quan]	added #29: user's can choose the group that should be allowed 
			to view the own profile page (all, members, friends)
- [quan]	added block: show today's birthdays
- [quan]	added block: show latest registrations
- [quan]	added block: show online users

new in 1.0
==========

Features: MyProfile 1.0

added (if you have used pnProfile before)
=====
+ Password management and email adress management. If you use MyProfile you
  have to deactive / overwrite (attention: "Profile" is called a core module
  and cannot be deactivated by hand, so it is neccesarry to overwrite the module)
  the regular profile module. So you'll loose the passwort and email address 
  management. But don't panic. MyProfile brings a great management for the
  email addresses: New email adresses will only be taken as valid address after
  a confirmation.
+ live check for updates

removed (if you have used pnProfile before)
=======
- copy field's value into another table / column. I do not think that we need
  this feature any more. The MyProfile module is a full usable profile module.
  So choose: Use MyProfile or the regular Profile as profile module...
- functional accounts: This feature was not reimplemented. If you really need
  this feasture write a feature request in the NOC.

*******************************************************************************
* The pnProfile module will not be supported any more. Now,                   *
* pnProfile moved to MyProfile, the advanced Profile module for PostNuke .8   *
*******************************************************************************


Changelog for the pnprofile module

new in 0.63:
============