@@ -87,8 +87,12 @@
 		<!--[if $field.fieldtype eq "FLOAT"]--><!--[pnformfloatinput id=$field.identifier minValue=$field.num_minvalue maxValue=$field.num_maxvalue mandatory=$field.mandatory]--><!--[/if]-->
 		<!--[if $field.fieldtype eq "DATE"]--><!--[pnformdateinput id=$field.identifier mandatory=$field.mandatory]--><!--[/if]-->
 		<!--[if $field.fieldtype eq "COORD"]-->
-			<!--[pnml name="_MYPROFILELNG"]-->: <!--[pnformtextinput id="`$field.identifier`_lng" mandatory=$field.mandatory maxLength="15" textMode="singleLine"]-->
-			<!--[pnml name="_MYPROFILELAT"]-->: <!--[pnformtextinput id="`$field.identifier`_lat" mandatory=$field.mandatory maxLength="15" textMode="singleLine"]-->
+			<!--[if $mymapavailable]-->
+			<!--[*pndebug output="html"*]-->
+				<!--[pnmodapifunc modname="MyMap" type="user" func="generateMap" width="400" height="150" maptype="hybrid" zoomfactor="7" lat="`$field.identifier`_lat" lng="`$field.identifier`_lng" coords=$coords[$field.identifier]]-->
+			<!--[/if]-->
+			<!--[pnml name="_MYPROFILELNG"]-->: <!--[pnformtextinput id="`$field.identifier`_lng" mandatory=$field.mandatory maxLength="25" textMode="singleLine"]-->
+			<!--[pnml name="_MYPROFILELAT"]-->: <!--[pnformtextinput id="`$field.identifier`_lat" mandatory=$field.mandatory maxLength="25" textMode="singleLine"]-->
 		<!--[/if]-->
 		</div>
 		<!-- form item end -->
